syntax = "proto3";

package trip;

option go_package = "shared/proto/trip;trip";

service TripService {
    rpc PreviewTrip(PreviewTripRequest) returns (PreviewTripResponse);
}

message PreviewTripRequest {
    string passengerID = 1;
    Coordinate startLocation = 2;
    Coordinate endLocation = 3;
};

message  PreviewTripResponse {
    string tripId = 1;
    Route route = 2;
    repeated RideFare rideFares = 3;
};

message Coordinate {
    double latitude = 1;
    double longitude = 2;
};

message Geometry {
    repeated Coordinate coordinates =  1;
};

message Route {
    repeated Geometry geometry = 1;
    double distance = 2;
    double duration = 3;
};

enum PackageSlug {
  PACKAGE_SLUG_UNSPECIFIED = 0;
  UBERX = 1;
  BLACK = 2;
}

message RideFare {
  string id = 1;
  string passengerID = 2;
  PackageSlug packageSlug = 3;
  double totalPriceInCents = 4;
}